force-app/main/default/objects/CancelCalculateCheck__c/CancelCalculateCheck__c.object-meta.xml
<CustomObject>
    <label>解約精算チェック</label>
    <nameField>
        <label>解約精算チェック</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>