force-app/main/default/objects/CancelCalculateCheck__c/fields/CheckFieldsName__c.field-meta.xml
<CustomField>
    <fullName>CheckFieldsName__c</fullName>
    <label>チェック項目名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>