force-app/main/default/objects/CancelCalculateCheck__c/fields/CheckFieldsValue__c.field-meta.xml
<CustomField>
    <fullName>CheckFieldsValue__c</fullName>
    <label>チェック項目の値</label>
    <type>TextArea</type>
</CustomField>