force-app/main/default/objects/CancelCalculateCheck__c/fields/CorporateHousingRegulation__c.field-meta.xml
<CustomField>
    <fullName>CorporateHousingRegulation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>社宅規定</label>
    <referenceTo>CorporateHousingRegulation__c</referenceTo>
    <relationshipLabel>解約精算チェック</relationshipLabel>
    <relationshipName>CorporateHousingRegulation</relationshipName>
    <type>Lookup</type>
</CustomField>