force-app/main/default/objects/CancelCalculateCheck__c/fields/IsReconfirmMandatory__c.field-meta.xml
<CustomField>
    <fullName>IsReconfirmMandatory__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再査必須</label>
    <type>Checkbox</type>
</CustomField>