force-app/main/default/objects/CancelCalculateCheck__c/fields/ReconfirmCheck__c.field-meta.xml
<CustomField>
    <fullName>ReconfirmCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <label>再査チェック</label>
    <type>Checkbox</type>
</CustomField>