force-app/main/default/objects/CancelCalculateCheck__c/fields/RegulationFieldsValue__c.field-meta.xml
<CustomField>
    <fullName>RegulationFieldsValue__c</fullName>
    <label>規定項目の値</label>
    <type>TextArea</type>
</CustomField>